WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73596
[MutationObservers] StyleAttributeMutationScope shouldn't be implemented with static classes
https://bugs.webkit.org/show_bug.cgi?id=73596
Summary
[MutationObservers] StyleAttributeMutationScope shouldn't be implemented with...
Rafael Weinstein
Reported
2011-12-01 15:35:02 PST
This breaks the mac chrome build.
Attachments
Patch
(3.50 KB, patch)
2011-12-01 15:38 PST
,
Rafael Weinstein
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rafael Weinstein
Comment 1
2011-12-01 15:38:02 PST
Created
attachment 117504
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-01 19:39:26 PST
Comment on
attachment 117504
[details]
Patch Clearing flags on attachment: 117504 Committed
r101736
: <
http://trac.webkit.org/changeset/101736
>
WebKit Review Bot
Comment 3
2011-12-01 19:39:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug