[MutationObservers] StyleAttributeMutationScope shouldn't be implemented with static classes https://bugs.webkit.org/show_bug.cgi?id=73596

Patch by Rafael Weinstein <rafaelw@chromium.org> on 2011-12-01
Reviewed by Ojan Vafai.

No tests needed. This patch is a minor refactor.

* css/CSSMutableStyleDeclaration.cpp:

Canonical link: https://commits.webkit.org/90207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101736 268f45cc-cd09-0410-ab3c-d52691b4dbfc